fix bug alignement explorateur fichier

--- a/assets/css/styles-seb.css
+++ b/assets/css/styles-seb.css
@@ -253,10 +253,13 @@ footer {
         line-height: inherit;
     }
 
-        .listing:not(.listing-files) .collapsible-header:not(.-with-child):only-child, .listing.listing-files li.folder .collapsible-header:not(.-with-child):only-child {
+        .listing:not(.listing-files) .collapsible-header:not(.-with-child):only-child, .listing.listing-files li.folder .collapsible-body .collapsible-header:not(.-with-child):only-child {
             padding-left: 4rem;
         }
         .listing.listing-files li:not(.folder) .collapsible-header:only-child {
+            padding-left: 3rem;
+        }
+        .listing.listing-files>.folder>.collapsible-header:not(.-with-child) {
             padding-left: 3rem;
         }
 
